# opx-nas-daemon

./: .gitreview  Makefile.am  README.md  configure.ac
cfg/: Makefile  base_nas_default_init.py  base_nas_default_init.sh  dn_nas_default_init_config.xml  dn_rules.sh  opx-nas-init.service  opx-nas.service
cfg/etc/sysctl.d/: dn-ip.conf
debian/: changelog  control  rules
inc/: Makefile.am
inc/opx/: hald_init.h
src/: hald_init.c  main.c
src/unit_test/: run_test
